Fix the pages without full bleed images not taking 100% of the space

--- a/sites/all/themes/equus_bootstrap_subtheme/css/style.css
+++ b/sites/all/themes/equus_bootstrap_subtheme/css/style.css
@@ -662,6 +662,7 @@ div.form-item div.password-suggestions, .page-user-register #edit-field-user-dob
 
 #content-area {
     background-color: white;
+    width: 100%;
     /*background-color: #f5f5f5;*/
     /*box-shadow: -3px 0px 3px rgba(0,0,0,0.2);*/
 }
